--- a/session0/session0.ipynb
+++ b/session0/session0.ipynb
@@ -289,8 +289,8 @@
     "Find the modulo 19 of these numbers:\n",
     "\n",
     "* 99\n",
-    "* 456 * 444\n",
-    "* 9 ^ 77\n",
+    "* \\\\(456 \\cdot 444\\\\)\n",
+    "* \\\\(9^{77}\\\\)\n",
     "\n",
     "(note python uses ** to do exponentiation)"
    ]
