--- a/session5/session5.ipynb
+++ b/session5/session5.ipynb
@@ -160,12 +160,8 @@
     "# convert hash160 to p2pkh script\n",
     "# convert change amount to satoshis (multiply by 100 million)\n",
     "# create a new tx output for target\n",
-    "# sign with SIGHASH_ALL\n",
-    "# get the sighash\n",
-    "# sign with priv to get der\n",
-    "# add the sighash as a single byte bytes([sighash])\n",
-    "# get the sec from priv\n",
-    "# create a new script that has sig and sec as the new input sig"
+    "# now sign the 0th input with the private key using SIGHASH_ALL\n",
+    "# serialize and hexlify"
    ]
   },
   {
@@ -302,11 +298,6 @@
     "The redeemScript is:\n",
     "```\n",
     "475221022626e955ea6ea6d98850c994f9107b036b1334f18ca8830bfff1295d21cfdb702103b287eaf122eea69030a0e9feed096bed8045c8b98bec453e1ffac7fbdbd4bb7152ae\n",
-    "```\n",
-    "\n",
-    "#### 6.2. Make [this test](/edit/session5/tx.py) pass\n",
-    "```\n",
-    "tx.py:TxTest:test_verify_input2\n",
     "```"
    ]
   },
@@ -339,18 +330,6 @@
     "# add the sighash (4 bytes, little-endian of SIGHASH_ALL)\n",
     "# double_sha256 the result\n",
     "# this interpreted is a big-endian number is your z"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exercise 6.2\n",
-    "\n",
-    "reload(tx)\n",
-    "run_test(tx.TxTest('test_verify_input2'))"
    ]
   }
  ],
