--- a/session6/complete/session6.ipynb
+++ b/session6/complete/session6.ipynb
@@ -152,7 +152,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -226,7 +226,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.005s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n",
       ".\n",
@@ -236,7 +236,7 @@
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -316,7 +316,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n",
       ".\n",
@@ -358,10 +358,11 @@
     "# Calculating Target from Bits Example\n",
     "\n",
     "from binascii import unhexlify\n",
+    "from helper import little_endian_to_int\n",
     "\n",
     "bits = unhexlify('e93c0118')\n",
     "exponent = bits[-1]\n",
-    "coefficient = int.from_bytes(bits[:-1], 'little')\n",
+    "coefficient = little_endian_to_int(bits[:-1])\n",
     "target = coefficient*2**(8*(exponent-3))\n",
     "print(hex(target))"
    ]
@@ -383,15 +384,16 @@
     "# Calculating Difficulty from Target Example\n",
     "\n",
     "from binascii import unhexlify\n",
+    "from helper import little_endian_to_int\n",
     "\n",
     "bits = unhexlify('e93c0118')\n",
     "exponent = bits[-1]\n",
-    "coefficient = int.from_bytes(bits[:-1], 'little')\n",
+    "coefficient = little_endian_to_int(bits[:-1])\n",
     "target = coefficient*2**(8*(exponent-3))\n",
     "\n",
     "bits_min = unhexlify('ffff001d')\n",
     "exponent_min = bits_min[-1]\n",
-    "coefficient_min = int.from_bytes(bits_min[:-1], 'little')\n",
+    "coefficient_min = little_endian_to_int(bits_min[:-1])\n",
     "min = coefficient_min*2**(8*(exponent_min-3))\n",
     "\n",
     "difficulty = min // target\n",
@@ -433,6 +435,7 @@
     "# Exercise 6.1\n",
     "\n",
     "from binascii import unhexlify\n",
+    "from helper import little_endian_to_int\n",
     "\n",
     "hex_bits = 'f2881718'\n",
     "\n",
@@ -440,8 +443,8 @@
     "bits = unhexlify(hex_bits)\n",
     "# last byte is exponent\n",
     "exponent = bits[-1]\n",
-    "# first three bytes are the coefficient. use: int.from_bytes(x, 'little')\n",
-    "coefficient = int.from_bytes(bits[:-1], 'little')\n",
+    "# first three bytes are the coefficient in little endian\n",
+    "coefficient = little_endian_to_int(bits[:-1])\n",
     "# plug into formula coefficient * 2^(8*(exponent-3)) to get the target\n",
     "target = coefficient * 2**(8*(exponent-3))\n",
     "# print target using print('0x{:x}'.format(target).zfill(64))\n",
@@ -451,7 +454,7 @@
     "# do the same for the min_bits for min target\n",
     "min_bits = unhexlify(hex_min_bits)\n",
     "min_exponent = min_bits[-1]\n",
-    "min_coefficient = int.from_bytes(min_bits[:-1], 'little')\n",
+    "min_coefficient = little_endian_to_int(min_bits[:-1])\n",
     "min_target = min_coefficient * 2**(8*(min_exponent-3))\n",
     "\n",
     "# difficulty is min target / target\n",
@@ -470,7 +473,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -521,7 +524,7 @@
     "\n",
     "from binascii import unhexlify\n",
     "from io import BytesIO\n",
-    "from helper import double_sha256\n",
+    "from helper import double_sha256, little_endian_to_int\n",
     "from block import Block\n",
     "\n",
     "hex_block = '04000000fbedbbf0cfdaf278c094f187f2eb987c86a199da22bbb20400000000000000007b7697b29129648fa08b4bcd13c9d5e60abb973a1efac9c8d573c71c807c56c3d6213557faa80518c3737ec1'\n",
@@ -530,8 +533,8 @@
     "bin_block = unhexlify(hex_block)\n",
     "# double_sha256 the block\n",
     "sha = double_sha256(bin_block)\n",
-    "# interpret the result as a number in little endian. use: int.from_bytes(x, 'little')\n",
-    "proof = int.from_bytes(sha, 'little')\n",
+    "# interpret the result as a number in little endian\n",
+    "proof = little_endian_to_int(sha)\n",
     "# make a stream using BytesIO\n",
     "stream = BytesIO(bin_block)\n",
     "# parse the Block\n",
