--- a/session6/session6.ipynb
+++ b/session6/session6.ipynb
@@ -234,10 +234,11 @@
     "# Calculating Target from Bits Example\n",
     "\n",
     "from binascii import unhexlify\n",
+    "from helper import little_endian_to_int\n",
     "\n",
     "bits = unhexlify('e93c0118')\n",
     "exponent = bits[-1]\n",
-    "coefficient = int.from_bytes(bits[:-1], 'little')\n",
+    "coefficient = little_endian_to_int(bits[:-1])\n",
     "target = coefficient*2**(8*(exponent-3))\n",
     "print(hex(target))"
    ]
@@ -251,15 +252,16 @@
     "# Calculating Difficulty from Target Example\n",
     "\n",
     "from binascii import unhexlify\n",
+    "from helper import little_endian_to_int\n",
     "\n",
     "bits = unhexlify('e93c0118')\n",
     "exponent = bits[-1]\n",
-    "coefficient = int.from_bytes(bits[:-1], 'little')\n",
+    "coefficient = little_endian_to_int(bits[:-1])\n",
     "target = coefficient*2**(8*(exponent-3))\n",
     "\n",
     "bits_min = unhexlify('ffff001d')\n",
     "exponent_min = bits_min[-1]\n",
-    "coefficient_min = int.from_bytes(bits_min[:-1], 'little')\n",
+    "coefficient_min = little_endian_to_int(bits_min[:-1])\n",
     "min = coefficient_min*2**(8*(exponent_min-3))\n",
     "\n",
     "difficulty = min // target\n",
@@ -292,15 +294,17 @@
     "# Exercise 6.1\n",
     "\n",
     "from binascii import unhexlify\n",
+    "from helper import little_endian_to_int\n",
     "\n",
     "hex_bits = 'f2881718'\n",
     "\n",
     "# unhexlify to get the bits\n",
     "# last byte is exponent\n",
-    "# first three bytes are the coefficient. use: int.from_bytes(x, 'little')\n",
+    "# first three bytes are the coefficient in little endian\n",
     "# plug into formula coefficient * 2^(8*(exponent-3)) to get the target\n",
     "# print target using print('0x{:x}'.format(target).zfill(64))\n",
     "\n",
+    "hex_min_bits = 'ffff001d'\n",
     "# do the same for the min_bits for min target\n",
     "\n",
     "# difficulty is min target / target"
@@ -345,14 +349,14 @@
     "\n",
     "from binascii import unhexlify\n",
     "from io import BytesIO\n",
-    "from helper import double_sha256\n",
+    "from helper import double_sha256, little_endian_to_int\n",
     "from block import Block\n",
     "\n",
     "hex_block = '04000000fbedbbf0cfdaf278c094f187f2eb987c86a199da22bbb20400000000000000007b7697b29129648fa08b4bcd13c9d5e60abb973a1efac9c8d573c71c807c56c3d6213557faa80518c3737ec1'\n",
     "\n",
     "# unhexlify to get the binary block\n",
     "# double_sha256 the block\n",
-    "# interpret the result as a number in little endian. use: int.from_bytes(x, 'little')\n",
+    "# interpret the result as a number in little endian\n",
     "# make a stream using BytesIO\n",
     "# parse the Block\n",
     "# get the target\n",
@@ -370,13 +374,6 @@
     "reload(block)\n",
     "run_test(block.BlockTest('test_check_pow'))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
