--- a/session7/session7.ipynb
+++ b/session7/session7.ipynb
@@ -571,14 +571,16 @@
     "    tx_hashes=[unhexlify(h) for h in hex_tx_hashes],\n",
     ")\n",
     "b.calculate_merkle_tree()\n",
-    "index, num_items = 10, 18\n",
+    "index = 10\n",
     "merkle_proof = []\n",
-    "for level, index_at_level in enumerate(merkle_path(index, num_items)):\n",
-    "    if index_at_level % 2 == 1:\n",
-    "        partner = index_at_level - 1\n",
+    "current_index = index\n",
+    "for level in b.merkle_tree:\n",
+    "    if current_index % 2 == 1:\n",
+    "        partner = current_index - 1\n",
     "    else:\n",
-    "        partner = index_at_level + 1\n",
-    "    merkle_proof.append(b.merkle_tree[level][partner])\n",
+    "        partner = current_index + 1\n",
+    "    merkle_proof.append(level[partner])\n",
+    "    current_index //= 2\n",
     "print(index, merkle_proof)"
    ]
   },
@@ -652,12 +654,27 @@
     "b.tx_hashes = [unhexlify(x) for x in tx_hex_hashes]\n",
     "\n",
     "# calculate the merkle tree first\n",
+    "b.calculate_merkle_tree()\n",
     "# get the index of the tx_hash in the list of tx_hashes (b.tx_hashes.index(tx_hash))\n",
+    "index = b.tx_hashes.index(tx_hash)\n",
     "# initialize the proof hashes\n",
-    "# loop through the enumerated merkle path (keep track of level and index at level)\n",
+    "merkle_proof = []\n",
+    "# initialize the current index to the index at the lowest level (index)\n",
+    "current_index = index\n",
+    "# loop through merkle tree levels\n",
+    "for level in b.merkle_tree:\n",
     "    # if the current level index is odd, the partner is - 1\n",
+    "    if current_index % 2 == 1:\n",
+    "        partner = current_index - 1\n",
     "    # if the current level index is even, the partner is + 1\n",
-    "    # add the partner to proof hashes"
+    "    else:\n",
+    "        partner = current_index + 1\n",
+    "    # add the partner to proof hashes\n",
+    "    merkle_proof.append(level[partner])\n",
+    "    # update current_index to be integer divide by 2\n",
+    "    current_index //= 2\n",
+    "# print the index and proof hashes\n",
+    "print(index, merkle_proof)"
    ]
   },
   {
@@ -732,10 +749,11 @@
     "index = 6\n",
     "\n",
     "# get the current hash (reverse it as it needs to be little endian)\n",
-    "# get the merkle path for the index. assume the num items is 2**len(proof_hashes)\n",
+    "# initialize the current_index to the index\n",
     "# loop through proof hashes\n",
-    "    # if index_at_level is odd, proof_hash is on the left\n",
-    "    # if index_at_level is even, proof_hash is on the right\n",
+    "    # if current_index is odd, proof_hash is on the left\n",
+    "    # if current_index is even, proof_hash is on the right\n",
+    "    # update current_index to be integer divide by 2\n",
     "# see if the current one reversed is the same as merkle root"
    ]
   },
