--- a/session1/session1.ipynb
+++ b/session1/session1.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "Remember the % operator does the actual modulo operation. Also remember that + and - need to be in () because in the order of operations % comes before + and -.\n",
     "\n",
-    "#### 1.1. Solve these equations in F_31:\n",
+    "#### 1.1. Solve these equations in \\\\(F_{31}\\\\):\n",
     "\n",
     "```\n",
     "2+15=?\n",
@@ -73,17 +73,17 @@
    "source": [
     "### Exercise 2\n",
     "\n",
-    "#### 2.1. Solve these equations in F_31:\n",
+    "#### 2.1. Solve these equations in \\\\(F_{31}\\\\):\n",
     "\n",
-    "```\n",
-    "24*19=?\n",
-    "17^3=?\n",
-    "5^5*18=?\n",
-    "```\n",
+    "\\\\(24\\cdot19=?\\\\)\n",
     "\n",
-    "#### 2.2. Write a program to calculate `1*k`, `2*k`, `3*k`, ... `30*k` for some k in F_31.  Notice anything about these sets?\n",
+    "\\\\(17^3=?\\\\)\n",
     "\n",
-    "#### 2.3. Write a program to calculate `k^30` for all k in F_31. Notice anything?\n",
+    "\\\\(5^5\\cdot18=?\\\\)\n",
+    "\n",
+    "#### 2.2. Write a program to calculate \\\\(0k, 1k, 2k, 3k, ... 30k\\\\) for some k in \\\\(F_{31}\\\\).  Notice anything about these sets?\n",
+    "\n",
+    "#### 2.3. Write a program to calculate \\\\(k^{30}\\\\) for all k in \\\\(F_{31}\\\\). Notice anything?\n",
     "\n",
     "#### 2.4. Make [these tests](/edit/session1/ecc.py) pass:\n",
     "```\n",
@@ -118,7 +118,9 @@
     "from random import randint\n",
     "\n",
     "prime = 31\n",
-    "# use range(31) to iterate over all numbers from 0 to 30 inclusive"
+    "k = randint(1, prime)\n",
+    "\n",
+    "# use range(prime) to iterate over all numbers from 0 to 30 inclusive"
    ]
   },
   {
@@ -130,7 +132,8 @@
     "# Exercise 2.3\n",
     "\n",
     "prime = 31\n",
-    "# use range(1, 31) to iterate over all numbers from 1 to 30 inclusive"
+    "\n",
+    "# use range(1, prime) to iterate over all numbers from 1 to 30 inclusive"
    ]
   },
   {
@@ -152,15 +155,15 @@
    "source": [
     "### Exercise 3\n",
     "\n",
-    "#### 3.1. Solve these equations in F_31:\n",
+    "#### 3.1. Solve these equations in \\\\(F_{31}\\\\):\n",
     "\n",
-    "```\n",
-    "3/24 = ?\n",
-    "17^(-3) = ?\n",
-    "4^(-4)*11 = ?\n",
-    "```\n",
+    "\\\\(3/24 = ?\\\\)\n",
     "\n",
-    "#### 3.2. Write a program to calculate `k/1`, `k/2`, `k/3`, ... `k/30` for some k in F_31. Notice anything about these sets?\n",
+    "\\\\(17^{-3} = ?\\\\)\n",
+    "\n",
+    "\\\\(4^{-4}\\cdot{11} = ?\\\\)\n",
+    "\n",
+    "#### 3.2. Write a program to calculate \\\\(k/1, k/2, k/3, ...k/30\\\\) for some k in \\\\(F_{31}\\\\). Notice anything about these sets?\n",
     "\n",
     "#### 3.3. Make [these tests](/edit/session1/ecc.py) pass:\n",
     "\n",
@@ -177,7 +180,7 @@
    "source": [
     "# Exercise 3.1\n",
     "\n",
-    "# remember pow(x, p-2, p) is the same as 1/x in F_x\n",
+    "# remember pow(x, p-2, p) is the same as 1/x in F_p\n",
     "prime = 31\n",
     "# 3/24 = ?\n",
     "# 17^(-3) = ?\n",
@@ -195,7 +198,9 @@
     "from random import randint\n",
     "\n",
     "prime = 31\n",
-    "# use range(31) to iterate over all numbers from 0 to 30 inclusive"
+    "k = randint(1, prime)\n",
+    "\n",
+    "# use range(prime) to iterate over all numbers from 0 to 30 inclusive"
    ]
   },
   {
@@ -219,11 +224,9 @@
    "source": [
     "### Exercise 4\n",
     "\n",
-    "#### 4.1. For the curve y^2 = x^3 + 5x + 7, which of these are on the curve?\n",
+    "#### 4.1. For the curve \\\\(y^2 = x^3 + 5x + 7\\\\), which of these are on the curve?\n",
     "\n",
-    "```\n",
-    "(-2,4), (3,7), (18,77)\n",
-    "```\n",
+    "\\\\((-2,4), (3,7), (18,77)\\\\)\n",
     "\n",
     "#### 4.2. Make [this test](/edit/session1/ecc.py) pass\n",
     "```\n",
@@ -290,7 +293,7 @@
    "source": [
     "### Exercise 6\n",
     "\n",
-    "#### 6.1. For the curve y^2 = x^3 + 5x + 7, what is (2,5) + (-1,-1)?\n",
+    "#### 6.1. For the curve \\\\(y^2 = x^3 + 5x + 7\\\\), what is \\\\((2,5) + (-1,-1)\\\\)?\n",
     "\n",
     "#### 6.2. Make [this test](/edit/session1/ecc.py) pass\n",
     "```\n",
@@ -332,7 +335,7 @@
    "source": [
     "### Exercise 7\n",
     "\n",
-    "#### 7.1. For the curve y^2 = x^3 + 5x + 7, what is (-1,1) + (-1,1)?\n",
+    "#### 7.1. For the curve \\\\(y^2 = x^3 + 5x + 7\\\\), what is \\\\((-1,1) + (-1,1)\\\\)?\n",
     "\n",
     "#### 7.2. Make [this test](/edit/session1/ecc.py) pass\n",
     "```\n",
