--- a/session3/session3.ipynb
+++ b/session3/session3.ipynb
@@ -23,12 +23,10 @@
     "\n",
     "#### 1.1. Find the WIF Format of the following:\n",
     "\n",
-    "```\n",
-    "2^256-2^199, mainnet, compressed\n",
-    "2^256-2^201, testnet, uncompressed\n",
-    "0dba685b4511dbd3d368e5c4358a1277de9486447af7b3604a69b8d9d8b7889d, mainnet, uncompressed\n",
-    "1cca23de92fd1862fb5b76e5f4f50eb082165e5191e116c18ed1a6b24be6a53f, testnet, compressed\n",
-    "```\n",
+    "* \\\\(2^{256}-2^{199}\\\\), mainnet, compressed\n",
+    "* \\\\(2^{256}-2^{201}\\\\), testnet, uncompressed\n",
+    "* 0dba685b4511dbd3d368e5c4358a1277de9486447af7b3604a69b8d9d8b7889d, mainnet, uncompressed\n",
+    "* 1cca23de92fd1862fb5b76e5f4f50eb082165e5191e116c18ed1a6b24be6a53f, testnet, compressed\n",
     "\n",
     "#### 1.2. Make [this test](/edit/session3/ecc.py) pass\n",
     "```\n",
