fixed some annoyances

--- a/session3/complete/session3.ipynb
+++ b/session3/complete/session3.ipynb
@@ -440,7 +440,7 @@
     "### Exercise 7\n",
     "\n",
     "#### 7.1. What is the scriptSig from the second input in this tx?\n",
-    "#### 7.2. What is the scriptPubKey of the second output in this tx?\n",
+    "#### 7.2. What is the scriptPubKey and amount of the first output in this tx?\n",
     "#### 7.3. What is the amount for the second output?\n",
     "\n",
     "```\n",
