--- a/session5/complete/session5.ipynb
+++ b/session5/complete/session5.ipynb
@@ -227,7 +227,7 @@
     "))\n",
     "tx_obj = Tx(version=1, tx_ins=tx_ins, tx_outs=tx_outs, locktime=0, testnet=True)\n",
     "\n",
-    "# now sign the 0th input with the private key using SIGHASH_ALL\n",
+    "# now sign the 0th input with the private key using SIGHASH_ALL using sign_input\n",
     "tx_obj.sign_input(0, priv, SIGHASH_ALL)\n",
     "# serialize and hexlify\n",
     "print(hexlify(tx_obj.serialize()).decode('ascii'))"
