--- a/session5/session5.ipynb
+++ b/session5/session5.ipynb
@@ -160,7 +160,7 @@
     "# convert hash160 to p2pkh script\n",
     "# convert change amount to satoshis (multiply by 100 million)\n",
     "# create a new tx output for target\n",
-    "# now sign the 0th input with the private key using SIGHASH_ALL\n",
+    "# now sign the 0th input with the private key using SIGHASH_ALL using sign_input\n",
     "# serialize and hexlify"
    ]
   },
