--- a/session0.ipynb
+++ b/session0.ipynb
@@ -160,7 +160,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.004s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -253,9 +253,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Python Libraries\n",
+    "### Python Tricks\n",
     "\n",
-    "`binascii` is what we use to convert binary to/from hex like so:"
+    "Here is how we convert binary to/from hex:"
    ]
   },
   {
@@ -267,16 +267,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'68656c6c6f20776f726c64'\n",
+      "68656c6c6f20776f726c64\n",
       "b'hello world'\n"
      ]
     }
    ],
    "source": [
-    "from binascii import hexlify, unhexlify\n",
-    "\n",
-    "print(hexlify(b'hello world'))\n",
-    "print(unhexlify('68656c6c6f20776f726c64'))"
+    "print(b'hello world'.hex())\n",
+    "print(bytes.fromhex('68656c6c6f20776f726c64'))"
    ]
   },
   {
@@ -299,23 +297,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'9ad27d329e9588ca1e59afef4160014d11b8b2096efd1dcc84bcb4829ca410b0'\n"
+      "9ad27d329e9588ca1e59afef4160014d11b8b2096efd1dcc84bcb4829ca410b0\n"
      ]
     }
    ],
    "source": [
     "# Exercise 2\n",
     "\n",
-    "from binascii import hexlify, unhexlify\n",
-    "\n",
     "h = 'b010a49c82b4bc84cc1dfd6e09b2b8114d016041efaf591eca88959e327dd29a'\n",
     "\n",
-    "# convert to binary (unhexlify)\n",
-    "b = unhexlify(h)\n",
+    "# convert to binary (bytes.fromhex)\n",
+    "b = bytes.fromhex(h)\n",
     "# reverse ([::-1])\n",
     "b_rev = b[::-1]\n",
-    "# convert to hex (hexlify)\n",
-    "h_rev = hexlify(b_rev)\n",
+    "# convert to hex()\n",
+    "h_rev = b_rev.hex()\n",
     "print(h_rev)"
    ]
   },
@@ -348,18 +344,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
     }
    ],
    "source": [
-    "39 % 12"
+    "print(39 % 12)"
    ]
   },
   {
@@ -371,8 +364,8 @@
     "Find the modulo 19 of these numbers:\n",
     "\n",
     "* 99\n",
-    "* 456 * 444\n",
-    "* 9 ^ 77\n",
+    "* \\\\(456 \\cdot 444\\\\)\n",
+    "* \\\\(9^{77}\\\\)\n",
     "\n",
     "(note python uses ** to do exponentiation)"
    ]
@@ -399,6 +392,143 @@
     "print(99 % prime)\n",
     "print(456*444 % prime)\n",
     "print(9**77 % prime)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Converting from bytes to int and back\n",
+    "\n",
+    "Converting from bytes to integer requires learning about Big and Little Endian encoding. Essentially any number greater than 255 can be encoded in two ways, with the \"Big End\" going first or the \"Little End\" going first.\n",
+    "\n",
+    "Normal human reading is from the \"Big End\". For example 123 is read as 100 + 20 + 3. Some computer systems encode integers with the \"Little End\" first.\n",
+    "\n",
+    "A number like 500 is encoded this way in Big Endian:\n",
+    "\n",
+    "0x01f4 (256 + 244)\n",
+    "\n",
+    "But this way in Little Endian:\n",
+    "\n",
+    "0xf401 (244 + 256)\n",
+    "\n",
+    "In Python we can convert an integer to big or little endian using a built-in method:\n",
+    "\n",
+    "```python\n",
+    "n = 1234567890\n",
+    "big_endian = n.to_bytes(4, 'big')  # b'\\x49\\x96\\x02\\xd2'\n",
+    "little_endian = n.to_bytes(4, 'little')  # b'\\xd2\\x02\\x96\\x49'\n",
+    "```\n",
+    "\n",
+    "We can also convert from bytes to an integer this way:\n",
+    "\n",
+    "```python\n",
+    "big_endian = b'\\x49\\x96\\x02\\xd2'\n",
+    "n = int.from_bytes(big_endian, 'big')  # 1234567890\n",
+    "little_endian = b'\\xd2\\x02\\x96\\x49'\n",
+    "n = int.from_bytes(little_endian, 'little')  # 1234567890\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "499602d2\n",
+      "d2029649\n",
+      "1234567890\n",
+      "1234567890\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 1234567890\n",
+    "big_endian = n.to_bytes(4, 'big')\n",
+    "little_endian = n.to_bytes(4, 'little')\n",
+    "\n",
+    "print(big_endian.hex())\n",
+    "print(little_endian.hex())\n",
+    "\n",
+    "print(int.from_bytes(big_endian, 'big'))\n",
+    "print(int.from_bytes(little_endian, 'little'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 4\n",
+    "\n",
+    "1. Convert the following:\n",
+    "\n",
+    " * 8675309 to 8 bytes in big endian\n",
+    " * interpret ```b'\\x11\\x22\\x33\\x44\\x55'``` as a little endian integer\n",
+    "\n",
+    "2. Make the following tests pass:\n",
+    "\n",
+    "```\n",
+    "helper.py:test_little_endian_to_int\n",
+    "helper.py:test_int_to_little_endian\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'\\x00\\x00\\x00\\x00\\x00\\x84_\\xed'\n",
+      "366216421905\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 4.1\n",
+    "\n",
+    "n = 8675309\n",
+    "print(n.to_bytes(8, 'big'))\n",
+    "\n",
+    "little_endian = b'\\x11\\x22\\x33\\x44\\x55'\n",
+    "print(int.from_bytes(little_endian, 'little'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n",
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 4.2\n",
+    "\n",
+    "reload(helper)\n",
+    "run_test(helper.HelperTest('test_little_endian_to_int'))\n",
+    "run_test(helper.HelperTest('test_int_to_little_endian'))"
    ]
   }
  ],
