--- a/session6.ipynb
+++ b/session6.ipynb
@@ -40,7 +40,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.003s\n",
       "\n",
       "OK\n"
      ]
@@ -112,33 +112,29 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'15hZo812Lx266Dot6T52krxpnhrNiaqHya'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15hZo812Lx266Dot6T52krxpnhrNiaqHya\n"
+     ]
     }
    ],
    "source": [
     "# Exercise 3.1\n",
     "\n",
-    "from binascii import unhexlify\n",
     "from helper import h160_to_p2pkh_address\n",
     "from script import Script\n",
     "\n",
     "hex_script_pubkey = '76a914338c84849423992471bffb1a54a8d9b1d69dc28a88ac'\n",
     "\n",
-    "# unhexlify to get binary\n",
-    "script_pubkey = unhexlify(hex_script_pubkey)\n",
+    "# bytes.fromhex to get binary\n",
+    "script_pubkey = bytes.fromhex(hex_script_pubkey)\n",
     "# parse with Script\n",
     "s = Script.parse(script_pubkey)\n",
     "# get the 3rd element, which should be the hash160\n",
     "h160 = s.elements[2]\n",
     "# convert h160 to p2pkh address\n",
-    "h160_to_p2pkh_address(h160)"
+    "print(h160_to_p2pkh_address(h160))"
    ]
   },
   {
@@ -193,24 +189,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'2375044d646ad73594dd0b37b113becdb03964584c9e7e000000000000000000'\n"
+      "2375044d646ad73594dd0b37b113becdb03964584c9e7e000000000000000000\n"
      ]
     }
    ],
    "source": [
     "# Exercise 4.1\n",
     "\n",
-    "from binascii import hexlify, unhexlify\n",
     "from helper import double_sha256\n",
     "\n",
     "hex_block = '020000208ec39428b17323fa0ddec8e887b4a7c53b8c0a0a220cfd0000000000000000005b0750fce0a889502d40508d39576821155e9c9e3f5c3157f961db38fd8b25be1e77a759e93c0118a4ffd71d'\n",
     "\n",
-    "# unhexlify to get the binary\n",
-    "bin_block = unhexlify(hex_block)\n",
+    "# bytes.fromhex to get the binary\n",
+    "bin_block = bytes.fromhex(hex_block)\n",
     "# double_sha256 the result\n",
     "result = double_sha256(bin_block)\n",
-    "# hexlify to see what it looks like\n",
-    "print(hexlify(result))"
+    "# hex() to see what it looks like\n",
+    "print(result.hex())"
    ]
   },
   {
@@ -226,7 +221,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n",
       ".\n",
@@ -236,7 +231,7 @@
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -269,14 +264,13 @@
    "source": [
     "# Version Signaling Example\n",
     "\n",
-    "from binascii import unhexlify\n",
     "from io import BytesIO\n",
     "from block import Block\n",
     "\n",
     "hex_block = '020000208ec39428b17323fa0ddec8e887b4a7c53b8c0a0a220cfd0000000000000000005b0750fce0a889502d40508d39576821155e9c9e3f5c3157f961db38fd8b25be1e77a759e93c0118a4ffd71d'\n",
     "\n",
-    "# unhexlify to get the binary block\n",
-    "bin_block = unhexlify(hex_block)\n",
+    "# bytes.fromhex to get the binary block\n",
+    "bin_block = bytes.fromhex(hex_block)\n",
     "# create a stream using BytesIO\n",
     "stream = BytesIO(bin_block)\n",
     "# parse the block\n",
@@ -321,12 +315,12 @@
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.004s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.003s\n",
       "\n",
       "OK\n"
      ]
@@ -350,20 +344,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0x13ce9000000000000000000000000000000000000000000\n"
+      "0000000000000000013ce9000000000000000000000000000000000000000000\n"
      ]
     }
    ],
    "source": [
     "# Calculating Target from Bits Example\n",
     "\n",
-    "from binascii import unhexlify\n",
+    "from helper import little_endian_to_int\n",
     "\n",
-    "bits = unhexlify('e93c0118')\n",
+    "bits = bytes.fromhex('e93c0118')\n",
     "exponent = bits[-1]\n",
-    "coefficient = int.from_bytes(bits[:-1], 'little')\n",
+    "coefficient = little_endian_to_int(bits[:-1])\n",
     "target = coefficient*2**(8*(exponent-3))\n",
-    "print(hex(target))"
+    "print('{:x}'.format(target).zfill(64))"
    ]
   },
   {
@@ -382,16 +376,16 @@
    "source": [
     "# Calculating Difficulty from Target Example\n",
     "\n",
-    "from binascii import unhexlify\n",
+    "from helper import little_endian_to_int\n",
     "\n",
-    "bits = unhexlify('e93c0118')\n",
+    "bits = bytes.fromhex('e93c0118')\n",
     "exponent = bits[-1]\n",
-    "coefficient = int.from_bytes(bits[:-1], 'little')\n",
+    "coefficient = little_endian_to_int(bits[:-1])\n",
     "target = coefficient*2**(8*(exponent-3))\n",
     "\n",
-    "bits_min = unhexlify('ffff001d')\n",
+    "bits_min = bytes.fromhex('ffff001d')\n",
     "exponent_min = bits_min[-1]\n",
-    "coefficient_min = int.from_bytes(bits_min[:-1], 'little')\n",
+    "coefficient_min = little_endian_to_int(bits_min[:-1])\n",
     "min = coefficient_min*2**(8*(exponent_min-3))\n",
     "\n",
     "difficulty = min // target\n",
@@ -424,7 +418,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "000000000000000x1788f2000000000000000000000000000000000000000000\n",
+      "00000000000000001788f2000000000000000000000000000000000000000000\n",
       "46717549644.70642\n"
      ]
     }
@@ -432,26 +426,26 @@
    "source": [
     "# Exercise 6.1\n",
     "\n",
-    "from binascii import unhexlify\n",
+    "from helper import little_endian_to_int\n",
     "\n",
     "hex_bits = 'f2881718'\n",
     "\n",
-    "# unhexlify to get the bits\n",
-    "bits = unhexlify(hex_bits)\n",
+    "# bytes.fromhex to get the bits\n",
+    "bits = bytes.fromhex(hex_bits)\n",
     "# last byte is exponent\n",
     "exponent = bits[-1]\n",
-    "# first three bytes are the coefficient. use: int.from_bytes(x, 'little')\n",
-    "coefficient = int.from_bytes(bits[:-1], 'little')\n",
+    "# first three bytes are the coefficient in little endian\n",
+    "coefficient = little_endian_to_int(bits[:-1])\n",
     "# plug into formula coefficient * 2^(8*(exponent-3)) to get the target\n",
     "target = coefficient * 2**(8*(exponent-3))\n",
     "# print target using print('0x{:x}'.format(target).zfill(64))\n",
-    "print('0x{:x}'.format(target).zfill(64))\n",
+    "print('{:x}'.format(target).zfill(64))\n",
     "\n",
     "hex_min_bits = 'ffff001d'\n",
     "# do the same for the min_bits for min target\n",
-    "min_bits = unhexlify(hex_min_bits)\n",
+    "min_bits = bytes.fromhex(hex_min_bits)\n",
     "min_exponent = min_bits[-1]\n",
-    "min_coefficient = int.from_bytes(min_bits[:-1], 'little')\n",
+    "min_coefficient = little_endian_to_int(min_bits[:-1])\n",
     "min_target = min_coefficient * 2**(8*(min_exponent-3))\n",
     "\n",
     "# difficulty is min target / target\n",
@@ -470,7 +464,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -506,32 +500,28 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
     }
    ],
    "source": [
     "# Exercise 7.1\n",
     "\n",
-    "from binascii import unhexlify\n",
     "from io import BytesIO\n",
-    "from helper import double_sha256\n",
+    "from helper import double_sha256, little_endian_to_int\n",
     "from block import Block\n",
     "\n",
     "hex_block = '04000000fbedbbf0cfdaf278c094f187f2eb987c86a199da22bbb20400000000000000007b7697b29129648fa08b4bcd13c9d5e60abb973a1efac9c8d573c71c807c56c3d6213557faa80518c3737ec1'\n",
     "\n",
-    "# unhexlify to get the binary block\n",
-    "bin_block = unhexlify(hex_block)\n",
+    "# bytes.fromhex to get the binary block\n",
+    "bin_block = bytes.fromhex(hex_block)\n",
     "# double_sha256 the block\n",
     "sha = double_sha256(bin_block)\n",
-    "# interpret the result as a number in little endian. use: int.from_bytes(x, 'little')\n",
-    "proof = int.from_bytes(sha, 'little')\n",
+    "# interpret the result as a number in little endian\n",
+    "proof = little_endian_to_int(sha)\n",
     "# make a stream using BytesIO\n",
     "stream = BytesIO(bin_block)\n",
     "# parse the Block\n",
@@ -539,7 +529,7 @@
     "# get the target\n",
     "target = b.target()\n",
     "# check proof of work < target\n",
-    "proof < target"
+    "print(proof < target)"
    ]
   },
   {
@@ -553,7 +543,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.003s\n",
       "\n",
       "OK\n"
      ]
