--- a/session1.ipynb
+++ b/session1.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "Remember the % operator does the actual modulo operation. Also remember that + and - need to be in () because in the order of operations % comes before + and -.\n",
     "\n",
-    "#### 1.1. Solve these equations in F_31:\n",
+    "#### 1.1. Solve these equations in \\\\(F_{31}\\\\):\n",
     "\n",
     "```\n",
     "2+15=?\n",
@@ -80,7 +80,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n",
       ".\n",
@@ -105,17 +105,17 @@
    "source": [
     "### Exercise 2\n",
     "\n",
-    "#### 2.1. Solve these equations in F_31:\n",
+    "#### 2.1. Solve these equations in \\\\(F_{31}\\\\):\n",
     "\n",
-    "```\n",
-    "24*19=?\n",
-    "17^3=?\n",
-    "5^5*18=?\n",
-    "```\n",
+    "\\\\(24\\cdot19=?\\\\)\n",
     "\n",
-    "#### 2.2. Write a program to calculate `1*k`, `2*k`, `3*k`, ... `30*k` for some k in F_31.  Notice anything about these sets?\n",
+    "\\\\(17^3=?\\\\)\n",
     "\n",
-    "#### 2.3. Write a program to calculate `k^30` for all k in F_31. Notice anything?\n",
+    "\\\\(5^5\\cdot18=?\\\\)\n",
+    "\n",
+    "#### 2.2. Write a program to calculate \\\\(0k, 1k, 2k, 3k, ... 30k\\\\) for some k in \\\\(F_{31}\\\\).  Notice anything about these sets?\n",
+    "\n",
+    "#### 2.3. Write a program to calculate \\\\(k^{30}\\\\) for all k in \\\\(F_{31}\\\\). Notice anything?\n",
     "\n",
     "#### 2.4. Make [these tests](/edit/session1/ecc.py) pass:\n",
     "```\n",
@@ -161,7 +161,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 9, 18, 27, 36, 45, 54, 63, 72, 81, 90, 99, 108, 117, 126, 135, 144, 153, 162, 171, 180, 189, 198, 207, 216, 225, 234, 243, 252, 261, 270]\n"
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30]\n"
      ]
     }
    ],
@@ -170,10 +170,11 @@
     "\n",
     "from random import randint\n",
     "\n",
-    "# use range(31) to iterate over all numbers from 0 to 30 inclusive\n",
     "prime = 31\n",
-    "k = randint(1,31)\n",
-    "print(sorted([i*k for i in range(31)]))"
+    "k = randint(1,prime)\n",
+    "\n",
+    "# use range(prime) to iterate over all numbers from 0 to 30 inclusive\n",
+    "print(sorted([i*k % prime for i in range(prime)]))"
    ]
   },
   {
@@ -192,9 +193,10 @@
    "source": [
     "# Exercise 2.3\n",
     "\n",
-    "# use range(1, 31) to iterate over all numbers from 1 to 30 inclusive\n",
     "prime = 31\n",
-    "print([i**30 % prime for i in range(1, 31)])"
+    "\n",
+    "# use range(1, prime) to iterate over all numbers from 1 to 30 inclusive\n",
+    "print([i**30 % prime for i in range(1, prime)])"
    ]
   },
   {
@@ -208,12 +210,12 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -233,15 +235,15 @@
    "source": [
     "### Exercise 3\n",
     "\n",
-    "#### 3.1. Solve these equations in F_31:\n",
+    "#### 3.1. Solve these equations in \\\\(F_{31}\\\\):\n",
     "\n",
-    "```\n",
-    "3/24 = ?\n",
-    "17^(-3) = ?\n",
-    "4^(-4)*11 = ?\n",
-    "```\n",
+    "\\\\(3/24 = ?\\\\)\n",
     "\n",
-    "#### 3.2. Write a program to calculate `k/1`, `k/2`, `k/3`, ... `k/30` for some k in F_31. Notice anything about these sets?\n",
+    "\\\\(17^{-3} = ?\\\\)\n",
+    "\n",
+    "\\\\(4^{-4}\\cdot{11} = ?\\\\)\n",
+    "\n",
+    "#### 3.2. Write a program to calculate \\\\(k/1, k/2, k/3, ...k/30\\\\) for some k in \\\\(F_{31}\\\\). Notice anything about these sets?\n",
     "\n",
     "#### 3.3. Make [these tests](/edit/session1/ecc.py) pass:\n",
     "\n",
@@ -268,7 +270,7 @@
    "source": [
     "# Exercise 3.1\n",
     "\n",
-    "# remember pow(x, p-2, p) is the same as 1/x in F_x\n",
+    "# remember pow(x, p-2, p) is the same as 1/x in F_p\n",
     "prime = 31\n",
     "# 3/24 = ?\n",
     "print(3*24**(prime-2) % prime)\n",
@@ -296,10 +298,11 @@
     "\n",
     "from random import randint\n",
     "\n",
-    "# use range(31) to iterate over all numbers from 0 to 30 inclusive\n",
     "prime = 31\n",
-    "k = randint(1, 31)\n",
-    "print(sorted([i*pow(k,prime-2,prime)%prime for i in range(31)]))"
+    "k = randint(1, prime)\n",
+    "\n",
+    "# use range(31) to iterate over all numbers from 0 to 30 inclusive\n",
+    "print(sorted([k*pow(i,prime-2,prime)%prime for i in range(31)]))"
    ]
   },
   {
@@ -313,7 +316,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.002s\n",
       "\n",
       "OK\n"
      ]
@@ -335,11 +338,9 @@
    "source": [
     "### Exercise 4\n",
     "\n",
-    "#### 4.1. For the curve y^2 = x^3 + 5x + 7, which of these are on the curve?\n",
+    "#### 4.1. For the curve \\\\(y^2 = x^3 + 5x + 7\\\\), which of these are on the curve?\n",
     "\n",
-    "```\n",
-    "(-2,4), (3,7), (18,77)\n",
-    "```\n",
+    "\\\\((-2,4), (3,7), (18,77)\\\\)\n",
     "\n",
     "#### 4.2. Make [this test](/edit/session1/ecc.py) pass\n",
     "```\n",
@@ -444,7 +445,7 @@
    "source": [
     "### Exercise 6\n",
     "\n",
-    "#### 6.1. For the curve y^2 = x^3 + 5x + 7, what is (2,5) + (-1,-1)?\n",
+    "#### 6.1. For the curve \\\\(y^2 = x^3 + 5x + 7\\\\), what is \\\\((2,5) + (-1,-1)\\\\)?\n",
     "\n",
     "#### 6.2. Make [this test](/edit/session1/ecc.py) pass\n",
     "```\n",
@@ -492,7 +493,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -511,7 +512,7 @@
    "source": [
     "### Exercise 7\n",
     "\n",
-    "#### 7.1. For the curve y^2 = x^3 + 5x + 7, what is (-1,1) + (-1,1)?\n",
+    "#### 7.1. For the curve \\\\(y^2 = x^3 + 5x + 7\\\\), what is \\\\((-1,1) + (-1,1)\\\\)?\n",
     "\n",
     "#### 7.2. Make [this test](/edit/session1/ecc.py) pass\n",
     "```\n",
@@ -560,7 +561,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
